// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleCalendarEvents should display events 1`] = `
<DocumentFragment>
  <div>
    <li
      class="mdc-list-divider"
      role="separator"
    />
    <div
      class="data-row"
    >
      <div
        class="data-row__header"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons"
          title="Google Calendar"
        >
          event
        </i>
      </div>
      <div
        class="data-row__column"
        style="flex-grow: 1;"
      >
        <span
          class="data-row__line1 mdc-typography--subtitle1"
        >
          Summary 1
        </span>
        <span
          class="data-row__line2 mdc-typography--subtitle2"
        >
          All day event 1
        </span>
      </div>
      <div
        class="data-row__column events__time"
      />
    </div>
    <div
      class="data-row"
    >
      <div
        class="data-row__header"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons"
          title="Google Calendar"
        >
          event
        </i>
      </div>
      <div
        class="data-row__column"
        style="flex-grow: 1;"
      >
        <span
          class="data-row__line1 mdc-typography--subtitle1"
        >
          Summary 2
        </span>
      </div>
      <div
        class="data-row__column events__time"
      >
        1:00 PM - 3:00 PM
      </div>
    </div>
    <li
      class="mdc-list-divider"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`GoogleCalendarEvents should render without events 1`] = `<DocumentFragment />`;

exports[`GoogleCalendarEventsContainer should render when gapi is loaded but auth user is undefined 1`] = `<DocumentFragment />`;

exports[`GoogleCalendarEventsContainer should render when gapi is not loaded 1`] = `<DocumentFragment />`;

exports[`GoogleCalendarEventsContainer should render with google calendar events 1`] = `<DocumentFragment />`;

exports[`GoogleCalendarEventsContainer should render with google calendar events 2`] = `
<DocumentFragment>
  <div
    style="padding-left: 1em; margin-top: 2em;"
  >
    <h3
      class="mdc-typography--subtitle2"
      style="font-weight: 400;"
    >
      Suggestions for this timesheet:
    </h3>
  </div>
  <div>
    <li
      class="mdc-list-divider"
      role="separator"
    />
    <div
      class="data-row"
    >
      <div
        class="data-row__header"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons"
          title="Google Calendar"
        >
          event
        </i>
      </div>
      <div
        class="data-row__column"
        style="flex-grow: 1;"
      >
        <span
          class="data-row__line1 mdc-typography--subtitle1"
        >
          Summary 1
        </span>
        <span
          class="data-row__line2 mdc-typography--subtitle2"
        >
          All day event 1
        </span>
      </div>
      <div
        class="data-row__column events__time"
      />
    </div>
    <div
      class="data-row"
    >
      <div
        class="data-row__header"
      >
        <i
          class="rmwc-icon rmwc-icon--ligature material-icons"
          title="Google Calendar"
        >
          event
        </i>
      </div>
      <div
        class="data-row__column"
        style="flex-grow: 1;"
      >
        <span
          class="data-row__line1 mdc-typography--subtitle1"
        >
          Summary 2
        </span>
      </div>
      <div
        class="data-row__column events__time"
      >
        1:00 PM - 3:00 PM
      </div>
    </div>
    <li
      class="mdc-list-divider"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`GoogleCalendarEventsContainer should render without google calendar events 1`] = `<DocumentFragment />`;
